--- a/articles.html
+++ b/articles.html
@@ -58,6 +58,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207629#c0">Integer overflow in sysctl_kern_proc_args</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207911#c0">kiconv reference count integer overflow</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208035#c0">IPFW firewall heap overflow</a></li>
 				</ul>
 				
 				<br>
