--- a/articles.html
+++ b/articles.html
@@ -59,7 +59,8 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207629#c0">Integer overflow in sysctl_kern_proc_args</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207911#c0">kiconv reference count integer overflow</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208035#c0">IPFW firewall heap overflow</a></li>
-					<li><a href="https://reviews.freebsd.org/D5660#b011a572">Check for negative lengths in m_pulldown</a></li>
+					<li><a href="https://reviews.freebsd.org/D5660">Check for negative lengths in m_pulldown</a></li>
+					<li><a href="https://reviews.freebsd.org/D5662">Fix for improper bound checking on cn_namelen</a></li>
 				</ul>
 				
 				<br>
