--- a/articles.html
+++ b/articles.html
@@ -52,7 +52,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206680#c0">kbd race attacks</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206754#c0">Out of bounds negative array index in iicrdwr</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=295080">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206755#c0">Use of initialised stack variables in tdfx_query_update</a></li>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206761#c0">Kernel stack overflow in sysctl handler for kern.binmisc.add</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206761#c0">Kernel stack overflow in sysctl handler for kern.binmisc.add</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=297488">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207302#c0">Iconv uses strlen directly on user supplied memory</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207626#c0">Memory leak in ctl.c</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a></li>
