--- a/ps4.html
+++ b/ps4.html
@@ -64,7 +64,7 @@
 				</p>
 				
 				<p>
-					You may download my complete setup <a href="https://github.com/CTurt/PS4-playground">here</a> to run these tests yourself; it is currently for firmware 1.76 only.
+					You may download my complete setup <a href="https://github.com/CTurt/PS4-playground">here</a> to run these tests yourself; it is currently for firmware 1.76 only. If you are on an older firmware and wish to update to 1.76, you may download the <a href="http://www.psdevwiki.com/ps4/1.760.000">1.76 PUP file</a> and <a href="https://www.playstation.com/en-us/support/system-updates/ps4/">update via USB</a>.
 				</p>
 				
 				<br>
