--- a/dlclose-overflow.html
+++ b/dlclose-overflow.html
@@ -374,7 +374,7 @@ copyin(uap->buffer, allocation, 4 * count);</code></pre>
 				
 				<br>
 				
-				<h2>Controlling the overflow</h2>
+				<h2 id="control">Controlling the overflow size</h2>
 				<p>
 					All that is needed is to prepare the following heap layouts:
 				</p>
