--- a/skills.html
+++ b/skills.html
@@ -68,7 +68,7 @@
 				
 				<h2>Platforms</h2>
 				<ul>
-					<li>Experience with many platforms including Windows, Linux, <a href="articles.html#fbsd">FreeBSD</a>, <a href="ds.html">DS</a>, 3DS, GameCube, <a href="nes.html">NES</a>, <a href="cinoop.html">Game Boy</a>, PSP, <a href="articles.html#ps4">PS4</a>, Arduino, iOS, and Raspberry Pi</li>
+					<li>Experience with many platforms including Windows, Linux, <a href="articles.html#fbsd">FreeBSD</a>, <a href="articles.html#ds">DS</a>, 3DS, GameCube, <a href="nes.html">NES</a>, <a href="cinoop.html">Game Boy</a>, PSP, <a href="articles.html#ps4">PS4</a>, Arduino, iOS, and Raspberry Pi</li>
 					<li>Ability to apply a range of techniques to optimise code for either space or performance on embedded systems</li>
 				</ul>
 				
