--- a/cinoop.html
+++ b/cinoop.html
@@ -486,7 +486,7 @@ jr z</code></pre>
 				
 				<h2>Sprites</h2>
 				<p>
-					The final major addition to the core would be sprite support, which isn't too difficult if you've already implemented displaying background maps. The Game Boy can display up to 40 sprites, with the properties of each stored in a basic OAM table, containing the position, tile number, palette number, flip, and priority.
+					The final major addition to the core would be sprite support, which wasn't too difficult to implement after having already implemented background maps. The Game Boy can display up to 40 sprites, with the properties of each stored in a basic OAM table, containing the position, tile number, palette number, flip, and priority.
 				</p>
 				
 				<br>
