--- a/fbsd.html
+++ b/fbsd.html
@@ -57,6 +57,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207629#c0">Integer overflow in sysctl_kern_proc_args</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207911#c0">kiconv reference count integer overflow</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208035#c0">IPFW firewall heap overflow</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208807#c0">DoS in gsstest</a></li>
 				</ul>
 			</div>
 		</div>
