--- a/fbsd.html
+++ b/fbsd.html
@@ -37,6 +37,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206648#c0">Fix double strlen in ktrstruct</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=294934">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206754#c0">Out of bounds negative array index in iicrdwr</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=295080">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206761#c0">Kernel stack overflow in sysctl handler for kern.binmisc.add</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=297488">Accepted patch</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206585#c2">hpt_set_info buffer overflow</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=298231">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -44,7 +45,6 @@
 				<h2>Unpatched</h2>
 				<h3>Buffer overflow</h3>
 				<ul>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206585#c2">hpt_set_info buffer overflow</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208035#c0">IPFW firewall heap overflow</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208808#c0">Heap overflow in nlm system call</a></li>
 				</ul>
