New FreeBSD commit!

--- a/fbsd.html
+++ b/fbsd.html
@@ -39,6 +39,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206761#c0">Kernel stack overflow in sysctl handler for kern.binmisc.add</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=297488">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206585#c2">hpt_set_info buffer overflow</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=298231">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207626#c0">Memory leak in ctl.c</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=298279">Accepted patch</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206573#c0">Improper userland pointer handling in aacraid</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=298280">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -54,7 +55,6 @@
 				
 				<h3>Improper memory handling</h3>
 				<ul>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206573#c0">Improper userland pointer handling in aacraid</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206581#c3">Use of uninitialised stack data in bxe device</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206755#c0">Use of initialised stack variables in tdfx_query_update</a></li>
 				</ul>
