--- a/fbsd.html
+++ b/fbsd.html
@@ -40,6 +40,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206585#c2">hpt_set_info buffer overflow</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=298231">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207626#c0">Memory leak in ctl.c</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=298279">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206573#c0">Improper userland pointer handling in aacraid</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=298280">Accepted patch</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208808#c0">Heap overflow in nlm system call</a> - <a href="https://svnweb.freebsd.org/base?view=revision&revision=298351">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -48,7 +49,6 @@
 				<h3>Buffer overflow</h3>
 				<ul>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208035#c0">IPFW firewall heap overflow</a></li>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208808#c0">Heap overflow in nlm system call</a></li>
 				</ul>
 				
 				<br>
