--- a/fbsd.html
+++ b/fbsd.html
@@ -49,6 +49,7 @@
 				<h3>Buffer overflow</h3>
 				<ul>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208035#c0">IPFW firewall heap overflow</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208985#c0">DoS / heap overflow in bpf_stats_sysctl</a></li>
 				</ul>
 				
 				<br>
