--- a/skills.html
+++ b/skills.html
@@ -76,7 +76,7 @@
 				
 				<h2>Misc</h2>
 				<ul>
-					<li>Understanding of advanced topics including <a href="cinoop.html">emulation</a>, <a href="compression.html">compression</a>, and <a href="exploits.html">exploitation</a></li>
+					<li>Understanding of advanced topics including <a href="cinoop.html">emulation</a>, <a href="compression.html">compression</a>, and <a href="articles.html">exploitation</a></li>
 					<li><a href="vertex-net.html">Reverse engineering using IDA Pro</a></li>
 					<li>Git</li>
 					<li>Makefiles</li>
