--- a/fbsd.html
+++ b/fbsd.html
@@ -41,6 +41,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207626#c0">Memory leak in ctl.c</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=298279">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206573#c0">Improper userland pointer handling in aacraid</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=298280">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208808#c0">Heap overflow in nlm system call</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=298351">Accepted patch</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206626#c0">Integer overflow in nfssvc system call</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=299199">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -65,7 +66,6 @@
 				
 				<h3>Integer overflow</h3>
 				<ul>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206626#c0">Integer overflow in nfssvc system call</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=204097#c0">witness_initialize() does not perform bound checking of witness_count</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207629#c0">Integer overflow in sysctl_kern_proc_args</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207911#c0">kiconv reference count integer overflow</a></li>
