--- a/about.html
+++ b/about.html
@@ -96,7 +96,7 @@
 				
 				<h3>Platforms</h3>
 				<p>
-					I've worked with FreeBSD, Windows, Linux, and a variety of video game consoles from the <a href="nes.html">NES</a> to the <a href"articles.html#ps4">PS4</a>. I'm able to adapt quickly to new platforms, and apply a range of techniques to optimise code for either space or performance, as needed.
+					I've worked with FreeBSD, Windows, Linux, and a variety of video game consoles from the <a href="nes.html">NES</a> to the <a href="articles.html#ps4">PS4</a>. I'm able to adapt quickly to new platforms, and apply a range of techniques to optimise code for either space or performance, as needed.
 				</p>
 				
 				<br>
