--- a/sendmsg.html
+++ b/sendmsg.html
@@ -1015,7 +1015,7 @@ int main(void) {
 				<br>
 
 				<p>
-					I altered the code path <code>uma_zfree_arg</code> that follows slightly, and now target the <code>uz_fini</code> function pointer for my payload instead of <code>uz_dtor</code>.
+					I altered the code path that <code>uma_zfree_arg</code> follows slightly, and now target the <code>uz_fini</code> function pointer for my payload instead of <code>uz_dtor</code>.
 				</p>
 
 				<p>
