--- a/SETFKEY.html
+++ b/SETFKEY.html
@@ -284,7 +284,7 @@ fkey_change_ok(fkeytab_t *oldkey, fkeyarg_t *newkey, struct thread *td)
 				<br>
 				
 				<p>
-					The official patch may be downloaded from the <a href="https://security.FreeBSD.org/patches/SA-16:18/atkbd.patch">FreeBSD site</a>.
+					The official patch may be downloaded from the <a href="https://security.FreeBSD.org/patches/SA-16:18/atkbd.patch">FreeBSD site</a>. Commit reference for this patch may be found <a href="https://github.com/freebsd/freebsd/commit/1d7ec4d7fac90de8af28655a017b1b1ab5d0b24a">here</a>.
 				</p>
 				
 				<br>
