--- a/sendmsg.html
+++ b/sendmsg.html
@@ -124,7 +124,7 @@ sockargs(mp, buf, buflen, type)
 				
 				<h2>The patch</h2>
 				<p>
-					The issue was solved by adding an explicit check in <code>sockargs</code> to return <code>EINVAL</code> for negative lengths. The official patch may be downloaded from the <a href="https://security.FreeBSD.org/patches/SA-16:19/sendmsg.patch">FreeBSD site</a>.
+					The issue was solved by adding an explicit check in <code>sockargs</code> to return <code>EINVAL</code> for negative lengths. The official patch may be downloaded from the <a href="https://security.FreeBSD.org/patches/SA-16:19/sendmsg.patch">FreeBSD site</a>. Commit reference for this patch may be found <a href="https://github.com/freebsd/freebsd/commit/5e838e04e3b91d8abb280148ff38b52013f10389">here</a>.
 				</p>
 				
 				<br>
