--- a/fbsd.html
+++ b/fbsd.html
@@ -72,6 +72,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208807#c0">DoS in gsstest</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209078#c0">Minor bugs in vidcontrol</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209661#c0">amd64_set_ioperm overflow</a></li>
 				</ul>
 			</div>
 		</div>
