--- a/articles.html
+++ b/articles.html
@@ -34,7 +34,7 @@
 				
 				<h2 id="fbsd">FreeBSD kernel bugs</h2>
 				<p>
-					I'm currently a member of the <a href="https://hardenedbsd.org/article/shawn-webb/2016-01-26/new-member-cturt">HardenedBSD</a> team, where my role is to identify, analyse, and report vulnerabilities and other general improvements to the FreeBSD kernel. I initially submit patches to HardenedBSD which will later be considered for upstreaming to FreeBSD.
+					I've spent a lot of time auditing the FreeBSD kernel for vulnerabilities, (previously as a member of the <a href="https://hardenedbsd.org/article/shawn-webb/2016-01-26/new-member-cturt">HardenedBSD</a> team), and have proved successful in finding several and patching several.
 				</p>
 				
 				<p>
