--- a/fbsd.html
+++ b/fbsd.html
@@ -52,6 +52,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208808#c0">Heap overflow in nlm system call</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=298351">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206626#c0">Integer overflow in nfssvc system call</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=299199">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206581#c3">Use of uninitialised stack data in bxe device</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=298496">Code removed altogether</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209661#c0">amd64_set_ioperm overflow</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300332">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -72,7 +73,6 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208807#c0">DoS in gsstest</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209078#c0">Minor bugs in vidcontrol</a></li>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209661#c0">amd64_set_ioperm overflow</a></li>
 				</ul>
 			</div>
 		</div>
