--- a/ps4.html
+++ b/ps4.html
@@ -238,7 +238,7 @@ ret</code></pre>
 				</p>
 				
 				<p>
-					Since the structure of almost all functions follows something like this:
+					Since almost all functions are structured with a prologue and epilogue:
 				</p>
 				
 				<pre><code>; Save registers
