--- a/contact.html
+++ b/contact.html
@@ -33,11 +33,11 @@
 				<hr>
 				
 				<p>
-					If you are trying to encourage me to release any "tools which circumvent copyright protections" (a PS4 <i>jailbreak</i> for example), I will ignore your message. I have stated on numerous occasions that I have no interest in doing this.
+					Feel free to send mail to: <a href="mailto:ecturt@gmail.com">ecturt@gmail.com</a>, optionally encrypted with <a href="https://cturt.github.io/pgp.asc">my PGP key</a>.
 				</p>
 				
 				<p>
-					Otherwise, feel free to send general emails to: <a href="mailto:ecturt@gmail.com">ecturt@gmail.com</a>.
+					I will ignore any messages pertaining to PS4 piracy. I have stated on numerous occasions that I have no interest in this.
 				</p>
 			</div>
 		</div>
