--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 				</p>
 				
 				<p>
-					I am primarily focused on kernel exploitation, and am currently looking to use the knowledge acquired from my FreeBSD kernel research to progress onto more popular targets such as Linux, Android, and XNU.
+					I am primarily focused on kernel exploitation, and am currently looking to use the knowledge acquired from my FreeBSD kernel research to progress onto more popular targets such as Linux, and XNU.
 				</p>
 				
 				<br>
