--- a/about.html
+++ b/about.html
@@ -57,7 +57,7 @@
 				</p>
 				
 				<p>
-					After having learnt a great deal about kernel exploitation through my PS4 research, I then decided to audit the FreeBSD kernel source code to look for vulnerabilities. I eventually proved successful in identifying and exploiting 2 critical bugs, which I reported to the FreeBSD security team; I am currently coordinating a disclosure date with them, so that I can publish my latest research responsibly.
+					After having learnt a great deal about kernel exploitation through my PS4 research, I then decided to audit the FreeBSD kernel source code to look for vulnerabilities. I eventually proved successful in identifying and exploiting 2 critical bugs: <a href="SETFKEY.html">CVE-2016-1886</a> and <a href-"sendmsg.html">CVE-2016-1887</a>.
 				</p>
 				
 				<br>
