--- a/fbsd.html
+++ b/fbsd.html
@@ -53,6 +53,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206626#c0">Integer overflow in nfssvc system call</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=299199">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206581#c3">Use of uninitialised stack data in bxe device</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=298496">Code removed altogether</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209661#c0">amd64_set_ioperm overflow</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300332">Accepted patch</a></li>
+					<li>Memory leak in LINUX_TCGETS ioctl command - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300569">Accepted patch</a></li>
 				</ul>
 				
 				<br>
