--- a/fbsd.html
+++ b/fbsd.html
@@ -54,6 +54,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206581#c3">Use of uninitialised stack data in bxe device</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=298496">Code removed altogether</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209661#c0">amd64_set_ioperm overflow</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300332">Accepted patch</a></li>
 					<li>Memory leak in LINUX_TCGETS ioctl command - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300569">Accepted patch</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209545#c0">Heap overflows in an driver</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300612">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -63,7 +64,6 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208035#c0">IPFW firewall heap overflow</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208985#c0">DoS / heap overflow in bpf_stats_sysctl</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209113#c0">Heap overflow in geom ioctl handler</a></li>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209545#c0">Heap overflows in an driver</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206755#c0">Use of initialised stack variables in tdfx_query_update</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=204097#c0">witness_initialize() does not perform bound checking of witness_count</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207629#c0">Integer overflow in sysctl_kern_proc_args</a></li>
