--- a/sendmsg.html
+++ b/sendmsg.html
@@ -574,7 +574,7 @@ int main(void) {
 					From here we can dump the region which is being copied into:
 				</p>
 
-				<pre><code>dump binary memory dump.bin ($rsi) ($rsi+0x5000)</code></pre>
+				<pre><code>(gdb) dump binary memory dump.bin ($rsi) ($rsi+0x5000)</code></pre>
 
 				<br>
 
