--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
 					<img src="https://avatars0.githubusercontent.com/u/6132330?v=3&amp;s=400" style="width: 100%; margin-bottom: 8px; border-radius: 6px; -moz-border-radius: 6px; -webkit-border-radius: 6px;" />
 					
 					<div class="center">
+						<a href="mailto:ecturt@gmail.com"><img src="images/mail.png" alt="Email" style="padding: 4px;" /></a>
 						<a href="https://github.com/CTurt"><img src="images/GitHub.png" alt="GitHub" style="padding: 4px;" /></a>
 						<a href="https://twitter.com/CTurtE"><img src="images/Twitter.png" alt="Twitter" style="padding: 4px;" /></a>
 					</div>
