--- a/3ds-controller.html
+++ b/3ds-controller.html
@@ -52,11 +52,11 @@
 				</p>
 				
 				<div class="center">
-					<iframe class="youtube" width="420" height="315" src="https://www.youtube.com/embed/unAxDPQT-os" frameborder="0" allowfullscreen></iframe>
+					<iframe class="youtube" width="420" height="315" src="https://www.youtube.com/embed/Mt7c13G_Vx0" frameborder="0" allowfullscreen></iframe>
 				</div>
 				
 				<div class="quote-reference">
-					- Video thanks to <a href="https://www.youtube.com/user/rainjp01">Hyeonseok Kim</a>
+					- Video thanks to <a href="https://www.youtube.com/channel/UCMYdGpOrKvtPWvBqX1k7xLg">LarBob Doomer</a>
 				</div>
 			</div>
 		</div>
