--- a/fbsd.html
+++ b/fbsd.html
@@ -37,6 +37,7 @@
 				<ul>
 					<li><a href="SETFKEY.html">Analysis of CVE-2016-1886, SETFKEY FreeBSD kernel vulnerability</a></li>
 					<li><a href="sendmsg.html">Analysis of CVE-2016-1887, sendmsg FreeBSD kernel heap overflow</a></li>
+					<li><a href="compat-info-leaks.html">Analysis of stack disclosure vulnerabilities in FreeBSD compatibility layers</a></li>
 				</ul>
 				
 				<br>
