--- a/compat-info-leaks.html
+++ b/compat-info-leaks.html
@@ -192,7 +192,7 @@ int main(void) {
 				</p>
 
 				<pre><code>  [+] Total size: 60
-  [+] Contents
+  [+] Contents:
 04 00 00 00 00 FE FF FF A0 80 5D 02 00 F8 FF FF
 00 00 00 00 00 FE FF FF 7B E3 8F 80 FF FF FF FF
 00 00 2E 00 00 FE FF FF 28 39 2E 00 00 FE FF FF
