--- a/compat-info-leaks.html
+++ b/compat-info-leaks.html
@@ -551,7 +551,7 @@ int main(void) {
 				<br>
 				
 				<p>
-					The easiest way to verify the output of the above program, is to compare it to the stack guard leaked from a separate vulnerability, such as <code><a href="SETFKEY.html#frame">SETFKEY</a></code>. However, if your system has been patched against this vulnerability, you will have to either dump the stack guard with gdb, or write a custom kernel module.
+					The easiest way to verify the output of the above program is to compare it to the stack guard leaked from a separate vulnerability, such as <code><a href="SETFKEY.html#frame">SETFKEY</a></code>. However, if your system has been patched against this vulnerability, you will have to either dump the stack guard with gdb, or write a custom kernel module.
 				</p>
 				
 				<br>
