--- a/fbsd.html
+++ b/fbsd.html
@@ -56,6 +56,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209661#c0">amd64_set_ioperm overflow</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300332">Accepted patch</a></li>
 					<li>Memory leak in LINUX_TCGETS ioctl command - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300569">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209545#c0">Heap overflows in an driver</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300612">Accepted patch</a></li>
+					<li>User memory write in svr4 - <a href="https://svnweb.freebsd.org/base?view=revision&revision=303263">Accepted patch</a></li>
 				</ul>
 				
 				<br>
