--- a/fbsd.html
+++ b/fbsd.html
@@ -58,6 +58,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209545#c0">Heap overflows in an driver</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=300612">Accepted patch</a></li>
 					<li>User memory write in svr4 - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=303263">Accepted patch</a></li>
 					<li>Race condition in vt driver - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=303338">Accepted patch</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=211958#c0">Boot overflows when reading loader.conf</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=304532">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -77,7 +78,6 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208807#c0">DoS in gsstest</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209078#c0">Minor bugs in vidcontrol</a></li>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=211958#c0">Boot overflows when reading loader.conf</a></li>
 				</ul>
 			</div>
 		</div>
