--- a/dlclose-overflow.html
+++ b/dlclose-overflow.html
@@ -568,7 +568,7 @@ sendto(td, &amp;args);</code></pre>
 				
 				<br>
 				
-				<h2>Kernel heap primitives</h2>
+				<h2 id="kqueue">Kernel heap primitives</h2>
 				<p>
 					Now that we've been able to reliably control the overflow within our artificial kernel code tests, we need to find a piece of existing kernel code which we can trigger from userland to replicate the behaviour.
 				</p>
