--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 				</div>
 				
 				<p style="padding-top: 4px;">
-					Security researcher, primarily interested in FreeBSD kernel.
+					Security researcher.
 				</p>
 			</div>
 		</div>
