--- a/fbsd.html
+++ b/fbsd.html
@@ -60,6 +60,7 @@
 					<li>Race condition in vt driver - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=303338">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=211958#c0">Boot overflows when reading loader.conf</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=304532">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=308250">Accepted patch</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209078#c0">Minor bugs in vidcontrol</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=308312">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -77,7 +78,6 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206680#c0">kbd race attacks</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207302#c0">Iconv uses strlen directly on user supplied memory</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208807#c0">DoS in gsstest</a></li>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209078#c0">Minor bugs in vidcontrol</a></li>
 				</ul>
 			</div>
 		</div>
