--- a/fbsd.html
+++ b/fbsd.html
@@ -61,6 +61,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=211958#c0">Boot overflows when reading loader.conf</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=304532">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=308250">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209078#c0">Minor bugs in vidcontrol</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=308312">Accepted patch</a></li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206678#c0">OGIO_KEYMAP command does not restore priority level</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=311650">Accepted patch</a></li>
 				</ul>
 				
 				<br>
@@ -74,7 +75,6 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=204097#c0">witness_initialize() does not perform bound checking of witness_count</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207629#c0">Integer overflow in sysctl_kern_proc_args</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207911#c0">kiconv reference count integer overflow</a></li>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206678#c0">OGIO_KEYMAP command does not restore priority level</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206680#c0">kbd race attacks</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207302#c0">Iconv uses strlen directly on user supplied memory</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208807#c0">DoS in gsstest</a></li>
