--- a/fbsd.html
+++ b/fbsd.html
@@ -62,6 +62,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207627#c0">Negative array index in ctl.c</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=308250">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209078#c0">Minor bugs in vidcontrol</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=308312">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206678#c0">OGIO_KEYMAP command does not restore priority level</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=311650">Accepted patch</a></li>
+					<li><a href="https://github.com/freebsd/freebsd/commit/7c3158894ace3c0867a2de3791ad680ef50e71d3">Nandsim device driver race condition bugs</a></li>
 				</ul>
 				
 				<br>
