--- a/fbsd.html
+++ b/fbsd.html
@@ -79,7 +79,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206680#c0">kbd race attacks</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=207302#c0">Iconv uses strlen directly on user supplied memory</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=208807#c0">DoS in gsstest</a></li>
-					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=219472#c0"></a>Out of bounds access in vlan</li>
+					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=219472#c0">Out of bounds access in vlan</a></li>
 					<li><a href="https://reviews.freebsd.org/D10868">Race condition vulnerabilities in proto device</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=219525#c0">Multiple bugs in mpr ioctl handler</a></li>
 				</ul>
