--- a/fbsd.html
+++ b/fbsd.html
@@ -82,6 +82,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=219472#c0">Out of bounds access in vlan</a></li>
 					<li><a href="https://reviews.freebsd.org/D10868">Race condition vulnerabilities in proto device</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=219525#c0">Multiple bugs in mpr ioctl handler</a></li>
+					<li><a href="https://reviews.freebsd.org/D10958">ip_dummynet_compat improve size validation</a></li>
 				</ul>
 			</div>
 		</div>
