Apply style after page loaded

--- a/articles.html
+++ b/articles.html
@@ -88,6 +88,7 @@
 				
 				<ul>
 					<li><a href="cinoop.html">Writing a Game Boy emulator</a></li>
+					<li><a href="pinball.html">Reverse Engineering and Modding Mario Pinball Land (GBA)</a></li>
 				</ul>
 			</div>
 		</div>
