--- a/pinball.html
+++ b/pinball.html
@@ -1459,7 +1459,7 @@ void loadCurrentStageData(void) {
 </ul>
 
 <p>
-	For the first issue, we can call <code class="language-c">setAnimationFrame</code> (<code class="language-c">0x802F0C4</code>) on all door's after loading the new door states.
+	For the first issue, we can call <code class="language-c">setAnimationFrame</code> (<code class="language-c">0x802F0C4</code>) on all doors after loading the new door states.
 </p>
 
 <p>
