--- a/fbsd.html
+++ b/fbsd.html
@@ -63,6 +63,7 @@
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=209078#c0">Minor bugs in vidcontrol</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=308312">Accepted patch</a></li>
 					<li><a href="https://bugs.freebsd.org/bugzilla/show_bug.cgi?id=206678#c0">OGIO_KEYMAP command does not restore priority level</a> - <a href="https://svnweb.freebsd.org/base?view=revision&amp;revision=311650">Accepted patch</a></li>
 					<li><a href="https://github.com/freebsd/freebsd/commit/7c3158894ace3c0867a2de3791ad680ef50e71d3">Nandsim device driver race condition bugs</a></li>
+					<li><a href="https://github.com/freebsd/freebsd/commit/6dc902485b5c8f8571858c9b7ac8de3beb3ea15d#diff-db8939642b9a00f58994fda878dbe744">Fix off-by-one (page) errors in checks in d_mmap methods of several drivers</a></li>
 				</ul>
 				
 				<br>
