--- a/ps2-yabasic.html
+++ b/ps2-yabasic.html
@@ -43,7 +43,7 @@
 </p>
 
 <p>
-	The most desirable method is to use <a href="https://github.com/TnA-Plastic/FreeMcBoot">FreeMCBoot</a> to boot from a memory card, however installing this onto said memory card requires an already hacked console. Whilst you could purchase a memory card with FreeMCBoot pre-installed on it by someone else, it would be nice to have a way to install the exploit yourself. That's where I see a Yabasic exploit fitting in nicely, as an entry-point for launching the FreeMCBoot installer. In addition, a Yabasic exploit could be useful for people with with the latest slim consoles, which are not vulnerable to FreeMCBoot.
+	The most desirable method is to use <a href="https://github.com/TnA-Plastic/FreeMcBoot">FreeMCBoot</a> to boot from a memory card, however installing this onto said memory card requires an already hacked console. Whilst you could purchase a memory card with FreeMCBoot pre-installed on it by someone else, it would be nice to have a way to install the exploit yourself. That's where I see a Yabasic exploit fitting in nicely, as an entry-point for launching the FreeMCBoot installer. In addition, a Yabasic exploit could be useful for people with the latest slim consoles, which are not vulnerable to FreeMCBoot.
 </p>
 
 <p>
