--- a/shogihax.html
+++ b/shogihax.html
@@ -51,7 +51,7 @@
 </p>
 
 <p>
-  In this article I will describe how I exploited the game for arbitrary remote code execution, ultimately creating a solution for developing and testing small programs on the console that under my criteria is preferable to the other options.
+  In this article I will describe how I exploited the game for arbitrary remote code execution, ultimately creating a solution for developing and testing small programs on the console that under my criteria is preferable to the other options. The code is available on <a href="https://github.com/CTurt/shogihax">GitHub</a>.
 </p>
 
 <p>
