--- a/articles.html
+++ b/articles.html
@@ -93,6 +93,7 @@
 				<ul>
 					<li><a href="cinoop.html">Writing a Game Boy emulator</a></li>
 					<li><a href="pinball.html">Reverse Engineering and Modding Mario Pinball Land (GBA)</a></li>
+					<li><a href="shogihax.html">shogihax - Remote Code Execution on Nintendo 64 through Morita Shogi 64</a></li>
 				</ul>
 			</div>
 		</div>
