--- a/shogihax.html
+++ b/shogihax.html
@@ -588,7 +588,7 @@ modem.subcommand('IF', 0x000e, '\x00\x00\x00\x09', 'A' * 108 + packetPtr + 'C' *
 
 <h2>Conclusion</h2>
 <p>
-  Morita Shogi 64 was successfully exploited to provide the first UnPaTcHaBlE ReMoEe CoDe ExEcuTiOn exploit against the Nintendo 64 console.
+  Morita Shogi 64 was successfully exploited to provide the first UnPaTcHaBlE ReMoTe CoDe ExEcuTiOn exploit against the Nintendo 64 console.
 </p>
 
 <p>
