Add dates to articles

--- a/3ds-controller.html
+++ b/3ds-controller.html
@@ -30,6 +30,7 @@
 				</div>
 				
 				<h1>3DS Controller</h1>
+				<span class="date">Initial publication: March 19th, 2015</span>
 				<hr>
 				
 				<p>
