--- a/compression.html
+++ b/compression.html
@@ -30,6 +30,7 @@
 				</div>
 				
 				<h1>Compression</h1>
+				<span class="date">Initial publication: March 8th, 2015</span>
 				<hr>
 				
 				<p>
