--- a/ds-cfw.html
+++ b/ds-cfw.html
@@ -31,6 +31,7 @@
 				</div>
 				
 				<h1>DS Custom Firmwares</h1>
+				<span class="date">Initial publication: March 16th, 2015</span>
 				<hr>
 				
 				<p>
