--- a/sendmsg.html
+++ b/sendmsg.html
@@ -31,6 +31,7 @@
 				</div>
 				
 				<h1>Analysis of CVE-2016-1887, <code>sendmsg</code> FreeBSD kernel heap overflow</h1>
+				<span class="date">Initial publication: May 18th, 2016</span>
 				<hr>
 
 				<h2>Introduction</h2>
