--- a/shogihax.html
+++ b/shogihax.html
@@ -31,6 +31,7 @@
         </div>
 
 <h1>shogihax - Remote Code Execution on Nintendo 64 through Morita Shogi 64</h1>
+<span class="date">Initial publication: May 3rd, 2020</span>
 <hr>
 
 <div class="center">
