--- a/vertex-net.html
+++ b/vertex-net.html
@@ -31,6 +31,7 @@
 				</div>
 				
 				<h1>Reverse engineering VertexNet malware</h1>
+				<span class="date">Initial publication: May 8th, 2015</span>
 				<hr>
 				
 				<p>
