--- a/cinoop.html
+++ b/cinoop.html
@@ -31,6 +31,7 @@
 				</div>
 				
 				<h1>Writing a Game Boy emulator, Cinoop</h1>
+				<span class="date">Initial publication: March 24th, 2015</span>
 				<hr>
 				
 				<p>
