--- a/compat-info-leaks.html
+++ b/compat-info-leaks.html
@@ -31,6 +31,7 @@
 				</div>
 				
 				<h1>Analysis of stack disclosure vulnerabilities in FreeBSD compatibility layers</h1>
+				<span class="date">Initial publication: May 31st, 2016</span>
 				<hr>
 
 				<h2>Introduction</h2>
