--- a/nes.html
+++ b/nes.html
@@ -5,7 +5,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, minimum-scale=1.0, maximum-scale=1.0">
 		<link rel="stylesheet" type="text/css" href="css/core.css" />
-		<title>Buckbumble NES</title>
+		<title>Making an NES game</title>
 	</head>
 	
 	<body>
@@ -30,6 +30,7 @@
 				</div>
 				
 				<h1>Making an NES game</h1>
+				<span class="date">Initial publication: March 18th, 2015</span>
 				<hr>
 				
 				<p>
