--- a/pinball.html
+++ b/pinball.html
@@ -31,6 +31,7 @@
 				</div>
 
 <h1>Reverse Engineering and Modding Mario Pinball Land (GBA)</h1>
+<span class="date">Initial publication: March 19th, 2019</span>
 <hr>
 
 <p>
