--- a/ps2-yabasic.html
+++ b/ps2-yabasic.html
@@ -31,6 +31,7 @@
 				</div>
 
 <h1>Hacking the PS2 with Yabasic</h1>
+<span class="date">Initial publication: Oct 19th, 2019</span>
 <hr>
 
 <h2 id="introduction">Introduction</h2>
