--- a/articles.html
+++ b/articles.html
@@ -61,6 +61,10 @@
 					<a href="ps2-yabasic.html">Hacking the PS2 with Yabasic</a>. A fun little PS2 exploit just requiring the demo disc that shipped with early PAL consoles; also technically the first PS2 exploit not requiring an already hacked console, unofficial hardware, or opening the console.
 				</p>
 
+				<p>
+					<a href="freedvdboot.html">FreeDVDBoot</a>, an exploit for the PlayStation 2 DVD player which allows burning your own homebrew games and running them on an unmodified console as though they were official discs.
+				</p>
+
 				<br>
 				
 				<h2 id="xnu">XNU research</h2>
