--- a/freedvdboot.html
+++ b/freedvdboot.html
@@ -526,7 +526,7 @@ boot:
 <br>
 
 <p>
-	Stage 2 can now be arbitrarily sized C code as there no real space constraints.
+	Stage 2 can now be arbitrarily sized C code as there's no fixed space constraint.
 </p>
 
 <br>
